tests/fixtures/errors/non_exhaustive_match.gcl
// Error: non-exhaustive match — missing variant
type Nominal {}
type Warning {
    code: Dimensionless,
}
type Critical {
    code: Dimensionless,
}
type Status = Nominal | Warning | Critical;

param s: Status = Nominal { };

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Warning { code } => code,
};
